dependencies {
  // 使用文件系统路径引用JAR文件
  implementation files('/Users/oker/.m2/repository/systems/comodal/json-iterator/2.13.0/json-iterator-2.13.0.jar')
  implementation 'systems.comodal:json-iterator:2.13.0'
  implementation project(':core')
}

configurations.all {
  resolutionStrategy {
    eachDependency { details ->
      if (details.requested.group == 'systems.comodal' && details.requested.name == 'json-iterator') {
        details.useVersion '2.13.0'
        details.because "Forced to use locally built version compatible with Java 17"
      }
    }
  }
}

// 配置编译选项
tasks.withType(JavaCompile).configureEach {
  options.compilerArgs << '--release' << '17'
  options.fork = true
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

// 为验证启用--system属性
gradle.taskGraph.whenReady {
  System.setProperty('org.gradle.dependency.verification', 'off')
  System.setProperty('org.gradle.configuration-cache', 'false')
}

repositories {
  mavenLocal()
  maven {
    url = 'file:///Users/oker/.m2/repository'
  }
}